build: build site in a way that mirrors pages/ structure

--- a/site/templates/base.html
+++ b/site/templates/base.html
@@ -23,7 +23,7 @@
     </a>
     <div style="display: flex; flex-direction: row; margin-left: 3em; align-items: center;
     padding-top: 0.25em; flex-grow: 1;">
-      <a class="nav-item" href="/docs.html">Docs</a>
+      <a class="nav-item" href="/docs">Docs</a>
       <a class="nav-item" style="margin-left: 2em;"
       href="https://github.com/LightAndLight/ipso">GitHub</a>
       $if(no-edit)$
