--- a/site/templates/base.html
+++ b/site/templates/base.html
@@ -2,37 +2,12 @@
 <html>
 
 <head>
-  <meta charset="UTF-8">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,300;0,400;0,600;0,700;1,400&family=Roboto+Mono:wght@400;700&display=swap"
-    rel="stylesheet">
-  <link rel="stylesheet" href="/css/default.css">
-  <link rel="stylesheet" href="/css/syntax.css">
-  <title>$title$ - ipso</title>
+$partial("templates/head.html")$
+<title>$title$ - ipso</title>
 </head>
 
-<body style="display: flex; flex-direction: column; box-sizing: border-box;">
-  <nav style="display: flex; flex-direction: row;">
-    <a style="text-decoration: none; color: inherit;" href="/">
-      <header style="display: flex; flex-direction: row;">
-        <img src="/images/ipso.svg" width="32px" />
-        <div style="margin-left: 0.25em; margin-right: 0.25em;"></div>
-        <h1 style="font-weight: 400;">ipso</h1>
-      </header>
-    </a>
-    <div style="display: flex; flex-direction: row; margin-left: 3em; align-items: center;
-    padding-top: 0.25em; flex-grow: 1;">
-      <a class="nav-item" href="/docs">Docs</a>
-      <a class="nav-item" style="margin-left: 2em;"
-      href="https://github.com/LightAndLight/ipso">GitHub</a>
-      $if(no-edit)$
-      $else$
-      <a style="margin-left: auto; font-size: 0.9em;" href="https://github.com/LightAndLight/ipso/edit/gh-pages/site/$path$">Edit
-      on GitHub</a>
-      $endif$
-    </div>
-  </nav>
+<body>
+  $partial("templates/nav.html")$
   <main>
     $body$
   </main>
